# object-based-slam-warehouse

./: .gitignore  README.md
src/aws_warehouse_sim/: CMakeLists.txt  package.xml
src/aws_warehouse_sim/models/: primary_robot.urdf
src/aws_warehouse_sim/worlds/: custom_warehouse.world
src/data_logging/: visualize_logs.py  warehouse_inventory.csv  warehouse_mapping_log.csv  yolo_tracking_log.csv
src/lidar_input_node/: CMakeLists.txt  package.xml
src/lidar_input_node/src/: lidar_input_node.cpp
src/mapping_node/: package.xml  setup.cfg  setup.py
src/mapping_node/mapping_node/: mapping_node.py
src/orb_slam3_node/: CMakeLists.txt  package.xml
src/orb_slam3_node/config/: gazebo_zed_camera.yaml
src/orb_slam3_node/rviz2/: main.rviz  task_1.4.rviz  warehouse_slam_test.rviz
src/orb_slam3_node/src/: orb_slam3_node.cpp
src/reconstruction_node/: package.xml  setup.cfg  setup.py
src/rviz2/: main.rviz
src/slam_msgs/: CMakeLists.txt  package.xml
src/slam_msgs/msg/: Detection.msg  DetectionArray.msg
src/tracking_node/: package.xml  setup.py
src/visualization_node/: package.xml  setup.cfg  setup.py
src/yolo_detection_node/: package.xml  setup.py
src/yolo_detection_node/launch/: tracking.launch.py
src/yolo_detection_node/yolo_detection_node/: dataset_harvester.py  reconstruction_node.py  tracking_node.py  yolo_detector.py
src/zed_input_node/: CMakeLists.txt  package.xml
src/zed_input_node/rviz/: zed_camera_test.rviz
src/zed_input_node/src/: zed_input_node.cpp
